<resources>
    <string name="app_name">Android Training Pharos 2020</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="recover_password">Recover Password</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="my_list">My List</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="aa">aa;;</string>
    <string name="mydemo_text_view">Text View</string>
    <string name="mydemo_click_me">Click Me</string>
    <string name="peaky_blinders">peaky blinders</string>
    <string name="description">Violent . Forceful . Period Piece . Drama . 1920s</string>
    <string name="percent_match">95% Match</string>
    <string name="_2019">2019</string>
    <string name="_18">18+</string>
    <string name="_5_seasons">5 Seasons</string>
    <string name="download_s1_e1">Download S1:E1</string>
    <string name="story">Peaky Blinders is a gangster family of Irish and Roma origin epic set in Birmingham, England, in 1919, several months after the end of the First World War in November 1918.</string>
    <string name="netflix">Netflix</string>
    <string name="username">Username</string>
    <string name="add_to_story">Add to Story</string>
    <string name="view_as">View As</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="edit_public_details">Edit Public Details</string>
    <string name="see_about_info">See About Info</string>
    <string name="friends">Friends</string>
    <string name="_1_299_9_mutual">1,299 (9 mutual)</string>
    <string name="facebook">Facebook</string>
    <string name="create_post">Create Post</string>
    <string name="post">post</string>
    <string name="what_s_on_your_mind">What\'s on your mind ?</string>
    <string name="facebook_post">Facebook Post</string>
    <string name="timeline">Timeline</string>
    <string name="just_now">Just Now</string>
    <string name="hii_friends">Hii, Friends</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="youssef_ahmed">Youssef Ahmed</string>
    <string name="study">Studied at Computer and Systems Engineering Department - Faculty of engineering - Alexandria University</string>
    <string name="lives_in_alexandria_egypt">Lives in Alexandria, Egypt</string>
</resources>