<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".finaldemo.NetflixMovieOverviewActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/poster"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/app_logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_netflix_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_show_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_shows"
        style="@style/TitleTextViewStyle"
        app:layout_constraintStart_toEndOf="@+id/app_logo2"
        app:layout_constraintEnd_toStartOf="@+id/movies_text_view"
        app:layout_constraintTop_toTopOf="@+id/app_logo2"
        app:layout_constraintBottom_toBottomOf="@+id/app_logo2"/>

    <TextView
        android:id="@+id/movies_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        style="@style/TitleTextViewStyle"
        app:layout_constraintStart_toEndOf="@+id/tv_show_text_view"
        app:layout_constraintEnd_toStartOf="@+id/mylist_text_view"
        app:layout_constraintTop_toTopOf="@+id/app_logo2"
        app:layout_constraintBottom_toBottomOf="@+id/app_logo2"/>

    <TextView
        android:id="@+id/mylist_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_list"
        style="@style/TitleTextViewStyle"
        app:layout_constraintStart_toEndOf="@+id/movies_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_logo2"
        app:layout_constraintBottom_toBottomOf="@+id/app_logo2"/>

    <TextView
        android:id="@+id/title_text_view"
        android:layout_height="wrap_content"
        android:text="@string/peaky_blinders"
        android:textAllCaps="true"
        android:textAlignment="center"
        style="@style/TitleNameTextViewStyle"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.7"/>

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/TitleTextViewStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/mylist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play_btn"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
        android:layout_marginTop="15dp"
        style="@style/WhiteTextViewStyle"
        android:drawableTop="@drawable/ic_add"
        android:text="@string/my_list"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/mylist_btn"
        app:layout_constraintEnd_toEndOf="@+id/info_btn"
        app:layout_constraintTop_toTopOf="@+id/mylist_btn"
        app:layout_constraintBottom_toBottomOf="@+id/mylist_btn"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:drawableStart="@drawable/ic_play"
        android:text="@string/play"
        android:background="@drawable/bg_rect_white"/>

    <Button
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mylist_btn"
        app:layout_constraintBottom_toBottomOf="@+id/mylist_btn"
        style="@style/WhiteTextViewStyle"
        android:drawableTop="@drawable/ic_info"
        android:text="@string/info"
        android:background="@android:color/transparent"/>




</androidx.constraintlayout.widget.ConstraintLayout>