<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkGray"
    tools:context=".finaldemo.NetflixLoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_netflix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- default layout_constraintVertical_bias is 0.5 -->
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginHorizontal="15dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textColorHint="@color/lightGray2"
        android:background="@drawable/bg_react_gray"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@android:color/white"
        android:textColorHint="@color/lightGray2"
        android:background="@drawable/bg_react_gray"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:enabled="false"
        android:background="@drawable/bg_react_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/recover_password"
        android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>