<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/profile_post_image_view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.2"
        android:background="@drawable/bg_circle_gray"
        android:src="@drawable/user_profile"/>

    <TextView
        android:id="@+id/username_post_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/profile_post_image_view"
        app:layout_constraintStart_toEndOf="@+id/profile_post_image_view"
        android:layout_marginStart="10dp"
        android:text="@string/username"
        android:textSize="20sp"
        style="@style/UserNameTextViewStyle"/>

    <TextView
        android:id="@+id/time_post_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/username_post_text_view"
        app:layout_constraintStart_toStartOf="@+id/username_post_text_view"
        android:text="@string/just_now"
        android:textSize="20sp"
        style="@style/TitleTextViewStyleBlack"/>

    <ImageButton
        android:id="@+id/more1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/profile_post_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/more"
        android:background="@drawable/bg_react_gray3"/>

    <TextView
        android:id="@+id/post_text_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_post_image_view"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="20dp"
        tools:text="@string/hii_friends"
        style="@style/UserNameTextViewStyle"
        android:textStyle="normal"/>

    <View
        android:id="@+id/post_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="10dp"
        android:background="@color/lightGray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_text_view" />

    <Button
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/comment_btn"
        app:layout_constraintTop_toBottomOf="@+id/post_border"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/like"
        android:text="@string/like"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/comment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/like_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/like_btn"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:drawableStart="@drawable/comment"
        android:text="@string/comment"
        android:background="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>