<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".facebookTask.FacebookHomeActivity">

        <TextView
            android:id="@+id/create_post_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="15dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.6"
            style="@style/UserNameTextViewStyle"
            android:textStyle="normal"
            android:text="@string/create_post"/>

        <Button
            android:id="@+id/post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/create_post_text_view"
            app:layout_constraintBottom_toBottomOf="@+id/create_post_text_view"
            android:padding="15dp"
            android:text="@string/post"
            android:textSize="20sp"
            android:textColor="@color/lightGray2"
            android:textAllCaps="true"
            android:background="@android:color/white"
            android:enabled="false" />

        <View
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_post_text_view" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/border"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/youssef"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"/>

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/profile_image_view"
            app:layout_constraintStart_toEndOf="@+id/profile_image_view"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            style="@style/UserNameTextViewStyle"/>

        <EditText
            android:id="@+id/post_edit_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
            app:layout_constraintBottom_toTopOf="@+id/post_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="15dp"
            android:hint="@string/what_s_on_your_mind"
            android:textSize="15sp"
            android:gravity="top"/>

        <ImageView
            android:id="@+id/post_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/post_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/add_image_to_post_image_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/add_to_post_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/add_image_to_post_image_view"
            app:layout_constraintTop_toTopOf="@+id/add_image_to_post_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginStart="10dp"
            android:text="Add to your post"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/add_image_to_post_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/add_image"
            android:background="@android:color/white"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
